route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nrs-query-automation
  namespace: c2b678-prod
  labels:
    app: nrs-query-automation
    app.kubernetes.io/component: nrs-query-automation
    app.kubernetes.io/instance: nrs-query-automation
  annotations:
    openshift.io/host.generated: 'true'
spec:
  host: nrs-query-automation-c2b678-prod.apps.silver.devops.gov.bc.ca
  to:
    kind: Service
    name: nrs-query-automation
    weight: 100
  port:
    targetPort: 4001-tcp
  wildcardPolicy: None
